# watch-expense-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  seed.py
app/: app.py  config.py  dependencies.py  exception.py  lifespan.py  main.py  middleware.py
app/dependencies/: auth.py  services.py  token_provider.py
app/dtos/: advance.py  auth.py  config.py  department.py  expense.py  image_upload.py  project.py  response.py  type.py  user.py
app/errors/: app_exception.py  codes.py  mapping.py
app/infra/: bcrypt_password_hasher.py  email_notification_service.py  jwt_token_provider.py  s3_image_store.py
app/interfaces/: __init__.py  advance_repository.py  department_repository.py  expense_repository.py  image_metadata_repository.py  image_store.py  notification_service.py  password_hasher.py  project_repository.py  token_provider.py  user_repository.py
app/models/: __init__.py  advance.py  department.py  expense.py  image.py  notification.py  project.py  user.py
app/repository/: __init__.py  advance_repository.py  department_repository.py  expense_repository.py  image_metadata_repository.py  project_repository.py  schema.md  schemav2.md  test_department_repository.py  test_project_repository.py  test_user_repository.py  user_repository.py  utils.py
app/router/: auth_router.py
app/routers/: advance.py  auth.py  auth_router.py  department.py  expense.py  image.py  project.py  user.py
app/services/: advance.py  auth.py  image.py  (+5 more)
deploy/: build-and-push.sh  delete.py  deploy-cfn-stack.sh  deploy.py  template.yaml
tests/: conftest.py
(+43 files in other folders)
