[project]
name = "watch-expense-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.24",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "mypy-boto3-dynamodb>=1.42.3",
    "mypy-boto3-s3>=1.42.21",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
]
